# aabel

./: Cargo.toml  LICENSE-MIT  README.md  aabel.sln  pack.cmd
.github/workflows/: main.yml  mainx.yml  publish.yml
aabel/: Cargo.toml
aabel-bits/: Cargo.toml
aabel-bits/src/: lib.rs  traits.rs
aabel-cardinality/: Cargo.toml  README.md
aabel-cardinality/src/: lib.rs  myhasher.rs
aabel-frequency/: Cargo.toml
aabel-frequency/src/: cms.rs  lib.rs  majority.rs
aabel-hash/: Cargo.toml  README.md
aabel-hash/src/: city64.rs  farm64.rs  fnv64.rs  hash_ext.rs  hasher_ext.rs
aabel-hashers/: Cargo.toml  README.md
aabel-hashers/src/: city128.rs  city64.rs  farm64.rs  fnv128.rs  fnv64.rs  hash128.rs  hasher6464.rs  hasherpair.rs  lib.rs  murmur3.rs
aabel-membership/: Cargo.toml  README.md
aabel-membership/src/: lib.rs
aabel-membership/src/bloom/: counter.rs  filter.rs  mod.rs
aabel-membership/src/cuckoo/: bucket.rs  fi_pair.rs  filter.rs  index.rs  mod.rs
aabel-pds/: Cargo.toml
aabel-pds/examples/: bloom_filter.rs
aabel-pds/src/: into_hash_pair.rs  lib.rs
aabel/src/: lib.rs
aabel/src/distance/: mod.rs
cardinality/bits/: Cargo.toml
cardinality/probabilistic-counting/: Cargo.toml
docs/: AR.md  Queue.md  Reader.md  ar.md  basic.md  index.md  mapp.md  queue.md  reader.md  result.md  state.md
frequency/majority/: Cargo.toml
hashing/aabel-hash/: Cargo.toml  README.md
hashing/aabel-hash/src/: city64.rs  farm64.rs  hash128_ext.rs  hashable.rs  lib.rs  murmur32.rs  sip24.rs
membership/bloom-filter/: Cargo.toml
membership/bloom-filter/src/: bloom_counter.rs  bloom_filter.rs  lib.rs
membership/cuckoo-filter/: Cargo.toml
rank/ranking/: Cargo.toml
readme/: AR.md  Mapp.md  Queue.md  Reader.md  State.md
sketches/sketch-hashing/: Cargo.toml
sketches/test-similarity/: Cargo.toml
src/Aabel/: AR.fs  Aabel.fsproj  Async.fs  Library.fs  Mapp.fs  MappAR.fs  MappR.fs  Queue.fs  QueueAR.fs  QueueR.fs  Reader.fs  ReaderA.fs  ReaderAR.fs  ReaderR.fs  Result.fs  State.fs  StateA.fs  StateAR.fs  StateR.fs  Timed.fs
tests/Scripts/: QtAR.fsx  QtDepInjection.fsx  QtQueue.fsx  QtQueueAR.fsx  di.fsx  (+5 more)
(+63 files in other folders)
