[package]
name = "aabel-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cityhash = "0.1.1"
const-fnv1a-hash = "1.1.0"
const-murmur3 = "0.2.1"
farmhash = "1.1.5"
getrandom = "0.2"
siphasher = "0.3"

[features]
default = ["full"]
full = ["city", "farm", "fnv", "murmur3", "sip"]
city = []
farm = []
fnv = []
murmur3 = []
sip = []
