[package]
name = "bloom-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aabel-hash = { path = "../../aabel-hash", features = ["sip"] }
bit-vec ="0.6"
log = { workspace = true }

[dev-dependencies]
env_logger = "0.10"
quickcheck = "1.0"
quickcheck_macros = "1.0"
